--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,15 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            android:inputType="number"
+            android:hint="@string/number1"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="30sp"
+            android:text="@string/plus"/>
 
 
         <EditText
@@ -28,7 +36,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            android:inputType="number"
+            android:hint="@string/number2"/>
 
     </LinearLayout>
 
@@ -46,6 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        />
 
 </LinearLayout>
